# exo_client

./: exo.py  install.bat  install.sh  install_deps.sh  pyproject.toml  requirements.txt  start.bat  start.sh
.trae/documents/: extend_qwen3_tts_engine.md  support_unlimited_ocr_transformers_engine.md
exo/: .gitignore  README.md  helpers.py  main.py  models.py
exo.egg-info/: PKG-INFO  SOURCES.txt
exo/api/: chatgpt_api.py
exo/download/: new_shard_download.py  shard_download.py  test_new_shard_download.py
exo/download/hf/: hf_helpers.py
exo/inference/: dummy_inference_engine.py  inference_engine.py  model_tokenizers.py  shard.py  test_inference_engine.py  tokenizers.py
exo/inference/pytorch/: losses.py  pytorch_inference_engine.py  test_tts_asr_e2e.py  tests_inference_engine.py
exo/networking/: peer_handle.py  websocket_optimized.py
exo/networking/frp/: FRP_P2P_GUIDE.md  FRP_TOKEN_GUIDE.md  __init__.py  frp_auto_manager.py  frp_config.py  frp_demo.py  frp_discovery.py  frp_downloader.py  frp_process.py  generate_frp_cluster_config.py  test_frp_integration.py
exo/networking/grpc/: grpc_peer_handle.py  grpc_server.py  manager_relay_peer_handle.py  node_service.proto  node_service_pb2.py  node_service_pb2_grpc.py
exo/networking/manual/: manual_discovery.py  (+2 more)
exo/orchestration/: node.py  test_node.py
exo/topology/: device_capabilities.py  gpu_pool_api.py  gpu_pool_manager.py  model_aware_partitioning_strategy.py  partitioning_strategy.py  ring_memory_weighted_partitioning_strategy.py  topology.py
exo/viz/: topology_viz.py
logs/: 1
(+44 files in other folders)
