[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exo"
version = "0.1.0"
description = "Distributed inference framework"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["exo*"]

[tool.setuptools.package-data]
exo = ["**/*.proto"]
